      using compressed debug sections.
  * checks/fields.pm:
    + [NT] Apply patch from Niko Tyni to fix false-positive
      package-superseded-by-perl for packages with epochs.
      (Closes: #710919)
  * checks/manpages.{desc,pm}:
    + [NT] Apply patch from Bastien Roucariès to test for
      manpages named after their build path.
      (Closes: #713884)
  * checks/phppear.{desc,pm}:
    + [NT] New check based on patches from Mathieu Parent.
      (Closes: #708551)
  * checks/source-copyright.pm:
    + [NT] Some tags now refer to the line number of the field
      with an issue instead of the line number of the paragraph.
  * checks/systemd.{desc,pm}:
    + [NT] New check for systemd related files.  Thanks to
      Michael Stapelberg for providing the check and the
      tests.  (Closes: #704197)

  * collection/copyright-file:
    + [NT] Avoid creating an empty copyright file when it is
      not needed.

  * data/fields/virtual-packages:
    + [NT] Refresh.  Thanks to Laurent Bigonville for the
      reminder.  (Closes: #712641)
  * data/files/{fonts,locale-codes}:
    + [NT] Refresh.
  * data/menu-format/add-categories:
    + [NT] Apply patch from Bastien Roucariès to include newer
      categories.  Thanks to Yves-Alexis Perez for the report.
      (Closes: #712932)
  * data/output/manual-references:
    + [NT] Refresh.
  * data/scripts/interpreters:
    + [NT] Apply patch from Bastien Roucariès to include gjs.
      Thanks to Andreas Henriksson for the report.
      (Closes: #712607)

  * debian/control:
    + [NT] Add Build-Depends on pkg-php-tools for a new test.
  * debian/dirs:
    + [NT] Remove /var/lib/lintian, we no longer use it.
  * debian/docs:
    + [NT] Add auto-generated API documentation.
  * debian/lintian.examples:
    + [NT] New file to install examples.
  * debian/rules:
    + [NT] Generate API documentation during build.
    + [NT] Call dh_installexamples.

  * doc/examples/*:
    + [NT] New example files.
  * doc/lintian.xml: